--- a/src/index.html
+++ b/src/index.html
@@ -9,32 +9,10 @@
 </head>
 <body>
 
-  <div class="ui attached stackable menu">
-    <div class="ui container">
-      <a class="item">
-        <i class="home icon"></i> Home
-      </a>
-      <a class="item">
-        <i class="grid layout icon"></i> Browse
-      </a>
-      <a class="item">
-        <i class="mail icon"></i> Messages
-      </a>
-      <div class="ui simple dropdown item">
-        More
-        <i class="dropdown icon"></i>
-        <div class="menu">
-          <a class="item"><i class="edit icon"></i> Edit Profile</a>
-          <a class="item"><i class="globe icon"></i> Choose Language</a>
-          <a class="item"><i class="settings icon"></i> Account Settings</a>
-        </div>
-      </div>
-      <a href="" class="right item">
-        Login
-      </a>
-    </div>
-  </div>
   <app-root></app-root>
-
+  <script
+			  src="https://code.jquery.com/jquery-3.4.1.min.js"
+			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+			  crossorigin="anonymous"></script>
 </body>
 </html>
